--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
 
     <header class="sticky top-0 z-10 backdrop-blur-lg">
       <!-- nav  -->
-      <nav class="container mx-auto md:px-6">
+      <nav class="container mx-auto px-3 md:px-6">
         <div class="flex justify-between items-center py-3 md:pt-6 md:pb-10">
           <div class="md:hidden">
             <button onclick="home()" class="btn text-xl btn bg-primary px-3">
@@ -69,19 +69,19 @@
             <div class="">
               <img
                 src="./images/logo.png"
-                class="w-4/6 mx-auto md:w-full"
+                
                 alt=""
               />
             </div>
 
-            <h3 class="md:text-xl font-semibold">Donate Bangladesh</h3>
+            <h3 class="hidden md:flex text-xl font-semibold">Donate Bangladesh</h3>
           </div>
           <div class="flex items-center gap-2">
             <div class="">
-              <img src="./images/coin.png" class="w-full" alt="" />
+              <img src="./images/coin.png"  alt="" />
             </div>
 
-            <h3 class="md:text-xl text-gray1 font-medium">
+            <h3 class="text-xl text-gray1 font-medium">
               <span>5500</span> BDT
             </h3>
           </div>
