--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <header class="sticky top-0 z-2 backdrop-blur-lg">
       <!-- nav  -->
-      <nav class="container mx-auto md:px-6">
+      <nav class="container mx-auto px-3 md:px-6">
         <div class="flex justify-between items-center py-3 md:pt-6 md:pb-10">
           <div class="md:hidden">
             <button onclick="blog()" class="btn text-xl btn bg-primary px-3">
@@ -66,21 +66,19 @@
           </div>
           <div class="flex items-center md:gap-3">
             <div class="">
-              <img
-                src="./images/logo.png"
-                class="w-4/6 mx-auto md:w-full"
-                alt=""
-              />
+              <img src="./images/logo.png" alt="" />
             </div>
 
-            <h3 class="md:text-xl font-semibold">Donate Bangladesh</h3>
+            <h3 class="hidden md:flex text-xl font-semibold">
+              Donate Bangladesh
+            </h3>
           </div>
           <div class="flex items-center gap-2">
             <div class="">
-              <img src="./images/coin.png" class="w-full" alt="" />
+              <img src="./images/coin.png"  alt="" />
             </div>
 
-            <h3 class="md:text-xl text-gray1 font-medium">
+            <h3 class="text-xl text-gray1 font-medium">
               <span id="balance">20000</span> BDT
             </h3>
           </div>
@@ -91,7 +89,7 @@
     <section class="bg-white pb-20">
       <main class="container mx-auto px-3 md:px-6">
         <!-- button toggle -->
-        <div class="flex justify-center py-6 md:py-10 lg:py-16 gap-3">
+        <div class="flex justify-center py-6 md:py-10 lg:py-16 gap-3 ">
           <button
             id="donate-btn"
             class="font-semibold text-xl btn bg-primary md:px-8"
@@ -200,7 +198,14 @@
                 Donate for Flood Relief in Feni,Bangladesh
               </h3>
               <p class="text-gray1">
-                The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.
+                The recent floods in Feni have devastated local communities,
+                leading to severe disruption and loss. Your generous donation
+                will help provide immediate aid, including food, clean water,
+                and medical supplies, to those affected by this calamity.
+                Together, we can offer crucial support and help rebuild lives in
+                the aftermath of this disaster. Every contribution counts
+                towards making a real difference. Please consider donating today
+                to assist those in urgent need.
               </p>
               <input
                 id="input-field2"
@@ -262,7 +267,15 @@
                 Aid for Injured in the Quota Movement
               </h3>
               <p class="text-gray1">
-                The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.
+                The recent Quota movement has resulted in numerous injuries and
+                significant hardship for many individuals. Your support is
+                crucial in providing medical assistance, rehabilitation, and
+                necessary supplies to those affected. By contributing, you help
+                ensure that injured individuals receive the care and support
+                they need during this challenging time. Every donation plays a
+                vital role in alleviating their suffering and aiding in their
+                recovery. Please consider making a donation to support these
+                brave individuals in their time of need.
               </p>
               <input
                 id="input-field3"
